c++: constexpr trivial -fno-elide-ctors [PR104646]

The constexpr constructor checking code got confused by the expansion of a
trivial copy constructor; we don't need to do that checking for defaulted
ctors, anyway.

	PR c++/104646

gcc/cp/ChangeLog:

	* constexpr.c (maybe_save_constexpr_fundef): Don't do extra
	checks for defaulted ctors.

gcc/testsuite/ChangeLog:

	* g++.dg/cpp0x/constexpr-fno-elide-ctors1.C: New test.